tests/errors/syntax_errors/yield.py
# Uncovered yield statement by Pyccel
# pylint: disable=missing-function-docstring, missing-module-docstring

def get_one():
    yield 1
